--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "draft-js": "^0.10.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "jquery": "^3.2.1",
     "medium-editor": "^5.23.0",
     "morgan": "~1.7.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "serve-favicon": "~2.3.0"
   }
 }
