--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
+    "css-loader": "^0.28.0",
     "debug": "~2.2.0",
     "draft-js": "^0.10.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
+    "immutable": "^3.8.1",
     "jquery": "^3.2.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "medium-editor": "^5.23.0",
     "morgan": "~1.7.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.4.1"
   }
 }
