--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "medium-editor": "^5.23.0",
+    "medium-editor-tables": "^0.6.1",
     "morgan": "~1.7.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
