--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "medium-editor": "^5.23.0",
+    "medium-editor-custom-html": "^1.1.0",
     "medium-editor-handsontable": "^0.1.2",
     "medium-editor-tables": "^0.6.1",
     "morgan": "~1.7.0",
